# GLFW_University

./: CMakeLists.txt  README.md  glad.c  glad.h  main.cpp
BasicFigures/: Cube.cpp  Cube.hpp
Camera/: Camera.cpp  Camera.hpp
CustomOBJModel/: CustomOBJModelObject.hpp
Engine/: Engine.cpp  Engine.hpp
Engine/Camera/: Camera.cpp  Camera.hpp
Engine/Light/: Light.hpp
Engine/Light/PBR/: PBRLight.hpp
Engine/Light/Phong/: PhongLight.hpp
Engine/Managers/CameraManager/: CameraManager.cpp  CameraManager.hpp
Engine/Managers/LightManager/: LightManager.cpp  LightManager.hpp
Engine/Managers/MeshManager/: MeshManager.cpp  MeshManager.hpp
Engine/Managers/ShaderManager/: ShaderManager.cpp  ShaderManager.hpp
Engine/Mesh/: Mesh.cpp  Mesh.hpp
Engine/PBRMaterial/: PBRMaterial.cpp  PBRMaterial.hpp
Engine/Render/: Render.cpp  Render.hpp
Engine/Shader/: Shader.cpp  Shader.hpp
Engine/Texture/: Texture.cpp  Texture.hpp
Engine/Utils/: EngineUtil.hpp  OpenGLInclude.hpp
Engine/Utils/Mouse/: MouseUtils.hpp
Engine/Utils/OBJLoader/: OBJLoader.cpp  OBJLoader.hpp
Engine/Utils/Time/: TimeUtil.hpp
Object/: Object.cpp  Object.hpp
ObjectSystem/: ObjectSystem.cpp  ObjectSystem.hpp
Resources/Shaders/: DefaultFragment.frag  DefaultVertex.vert
Resources/Shaders/PBR/: PBR.frag  PBR.vert
Resources/Shaders/PhongModel/: DefaultPhongFragment.frag  DefaultPhongVertex.vert
Shaders/: Shaders.cpp  Shaders.hpp
Transformations/: Transformations.cpp  Transformations.hpp
Utils/: MouseInputUtils.hpp  ScreenUtils.hpp  TimeUtils.cpp  TimeUtils.hpp  WindowUtils.hpp
